# M0

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: contract-bug.yml  contract-change.yml
.github/workflows/: contract-validation.yml  release-package.yml
docs/: decisions.md  dependency-policy.md  domain-model.md  enums.md  error-codes.md  governance.md  id-conventions.md  idempotency-audit.md  known-issues.md  permission-matrix.csv  permissions.md  state-machines.md  task-transition-matrix.csv  transport-envelope.md  versioning.md
fixtures/invalid/: approval.invalid_resolved_without_actor.json  inventory_transaction.invalid_negative_quantity.json  inventory_transaction.invalid_transfer_missing_target.json  project_create.invalid_server_fields.json  task.invalid_bad_id.json  task.invalid_controlled_no_approval.json  task_command.invalid_progress_without_value.json  task_update.invalid_blocked_without_reason.json
fixtures/valid/: agent_proposal.valid.json  approval.valid.json  assignment.valid.json  audit_event.valid.json  employee.valid.json  inventory_transaction.valid.json  project.valid.json  project_create.valid.json  project_update.valid.json  sync_event.valid.json  task.valid.json  task_command.valid.json  (+1 more)
openapi/: openapi.yaml
scripts/: check_openapi_refs.py  check_release_version.py  generate_checksums.py  generate_reference_types.py  package_release.py  validate_contracts.py
tests/: test_validation.py
(+16 files in other folders)
