[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-platform-contracts"
version = "0.1.0"
description = "Automation platform public-contract authority"
requires-python = ">=3.11"
dependencies = [
  "PyYAML==6.0.3",
  "jsonschema==4.26.0",
  "referencing==0.37.0",
]

[tool.setuptools]
py-modules = []
